
2021-10-27: 2.0.12 (9a7bb80)
- Add ChargeTime parameter to low level state getter
- Add GetButtonState API
- Add GetAllDataX API (for internal use in WARP Charger)

2022-03-30: 2.1.0 (8524e38)
- Add support for charging slots and corresponding API

2022-05-02: 2.1.1 (4c219b8)
- Add FactoryReset-function

2022-05-06: 2.1.2 (3b72e77)
- Improve button/key stop logic

2022-06-07: 2.1.3 (66b31ec)
- Make sure to never start charging when key switch is turned off
- Increase ID.3 mode wait time hysteresis time from 500ms to 2500ms
- Make sure LED turns on until standby for every state change

2022-09-13: 2.1.4 (d5b9a2f)
- Make sure charging starts again when autostart is active and stop button was pressed while car was not charging
- Improve CP/PE resistance calculation (make sure there can't be over-/underflow)
- Add minimum time of 30s between error state E/F and next activation of contactor

2022-11-16: 2.1.5 (40c98f6):
- Add additional master communication watchdog

2022-12-22: 2.1.6 (eeb84d8):
- Make sure contactor is not turned off under load, even if stop of charging is triggered by wallbox
- Add API for get/set boost modus

2023-06-21: 2.1.7 (81eedf5):
- Add blink led indicator code 2001-2010 for custom error code with 1-10 "blink amount"

2023-08-21: 2.1.8 (dc1f4dd):
- Fix read of stored startup value of boost mode
- Make sure that ID.3 mode also works for state changes that go from C directly to A
- Wait for at least 30 seconds until contactor is turned on again after state D
- Wait for at least 5 seconds until contactor is turned on again after charging was stopped

2024-01-23: 2.1.9 (450e36d):
- Slot is not blocked by default if extern control is enabled
- LED API now has higher priority than breathing LED during charging

2024-07-24: 2.1.10 (16e1d76):
- Force PWM to 16A when car stops charging for improved CP/PE measurement

2024-09-05: 2.1.11 (95fdc72):
- Make sure charging time is zeroed when car does not wake up